<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemDetail_constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/item_paddingGeneral">


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/itemDetail_cvImg"
        android:layout_width="210dp"
        android:layout_height="180dp"
        android:src="@drawable/manzana"
        app:civ_border_color="@color/purple_500"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/itemDetail_cvInformation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:elevation="4dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDetail_cvImg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemDetail_clInformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/itemDetail_tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/item_name"
                android:textSize="@dimen/item_sizeTitles"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemDetail_tvContentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemDetail_tvNamePrueba"
                android:textSize="@dimen/item_sizeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDetail_tvName" />


            <TextView
                android:id="@+id/itemDetail_tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_paddingGeneral"
                android:text="@string/item_description"
                android:textSize="@dimen/item_sizeTitles"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDetail_tvContentName" />

            <TextView
                android:id="@+id/item_detail_tvContentDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemDetail_tvDescriptionPrueba"
                android:textSize="@dimen/item_sizeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDetail_tvDescription" />

            <TextView
                android:id="@+id/item_detail_tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_paddingGeneral"
                android:text="@string/itemDetail_tvTypeText"
                android:textSize="@dimen/item_sizeTitles"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_detail_tvContentDescription" />

            <TextView
                android:id="@+id/itemDetail_tvContentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemDetail_tvTypePrueba"
                android:textSize="@dimen/item_sizeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_detail_tvType" />

            <TextView
                android:id="@+id/itemDetail_tvRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_paddingGeneral"
                android:text="@string/item_tvRate"
                android:textSize="@dimen/item_sizeTitles"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDetail_tvContentType" />

            <TextView
                android:id="@+id/item_detail_tvContentRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemDetail_tvRatePrueba"
                android:textSize="@dimen/item_sizeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDetail_tvRate" />


            <TextView
                android:id="@+id/itemDetail_tvSymbolEuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_marginSymbol"
                android:text="€"
                android:textSize="@dimen/item_sizeText"
                app:layout_constraintBottom_toBottomOf="@+id/item_detail_tvContentRate"
                app:layout_constraintStart_toEndOf="@+id/item_detail_tvContentRate"
                app:layout_constraintTop_toTopOf="@+id/item_detail_tvContentRate" />

            <TextView
                android:id="@+id/itemDetail_tvTaxable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_paddingGeneral"
                android:text="@string/item_tvTaxable"
                android:textSize="@dimen/item_sizeTitles"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_detail_tvContentRate" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/itemDetail_cbTaxable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDetail_tvTaxable" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/itemDetail_btnSave"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="Aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>