<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodelitemcreation"
            type="com.jcasrui.item.usecase.ItemCreationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemCreation_llItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/itemCreation_paddingLayout">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/itemCreation_civImagenItem"
            android:layout_width="@dimen/civWidth"
            android:layout_height="@dimen/civHeight"
            android:src="@drawable/cart"
            app:civ_border_color="@color/purple_500"
            app:civ_border_width="@dimen/civBorderHeightWidth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/itemCreation_cvImgAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/itemCreation_cvCornerRadius"
            app:cardElevation="@dimen/cvElevation"
            app:layout_constraintBottom_toBottomOf="@+id/itemCreation_civImagenItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.70"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/itemCreation_imgBtnAdd"
                android:layout_width="@dimen/itemCreation_imgBtnWidthHeight"
                android:layout_height="@dimen/itemCreation_imgBtnWidthHeight"
                android:background="@color/md_theme_light_secondaryContainer"
                android:clickable="true"
                android:contentDescription="@string/itemCreation_imgBtnAdd"
                android:focusable="true"
                android:padding="@dimen/itemCreation_imgBtnPadding"
                android:src="@drawable/ic_action_addimgen" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/cvMarginTopButton"
            android:layout_marginBottom="@dimen/cvMarginTopButton"
            android:elevation="@dimen/cvElevation"
            app:cardCornerRadius="@dimen/cvCornerRadius"
            app:layout_constraintBottom_toTopOf="@+id/itemCreation_btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCreation_civImagenItem">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:scrollbars="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/itemCreation_glStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="@dimen/itemCreation_guide" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/itemCreation_glEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="@dimen/itemCreation_guide" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/itemCreation_tilName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/item_name"
                        android:paddingTop="@dimen/itemCreation_paddingtilName"
                        app:errorEnabled="true"
                        app:helperText="@string/itemCreation_tilHelperText"
                        app:layout_constraintEnd_toStartOf="@+id/itemCreation_glEnd"
                        app:layout_constraintStart_toStartOf="@+id/itemCreation_glStart"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/ic_action_cart"
                        app:startIconTint="@color/purple_200">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/itemCreation_tieName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|textCapSentences|textAutoCorrect"
                            android:lines="1"
                            android:maxLength="30"
                            android:maxLines="2"
                            android:overScrollMode="always"
                            android:scrollbarStyle="outsideOverlay"
                            android:scrollbars="vertical"
                            android:text="@={viewmodelitemcreation.nameItem}" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/itemCreation_tilDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/itemCreation_paddingGeneral"
                        app:layout_constraintEnd_toStartOf="@+id/itemCreation_glEnd"
                        app:layout_constraintStart_toStartOf="@+id/itemCreation_glStart"
                        app:layout_constraintTop_toBottomOf="@+id/itemCreation_tilName"
                        app:startIconDrawable="@drawable/ic_action_description"
                        app:startIconTint="@color/purple_200">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/itemCreation_tieDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/item_description"
                            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                            android:lines="2"
                            android:maxLength="100"
                            android:maxLines="3"
                            android:overScrollMode="always"
                            android:scrollbarStyle="outsideOverlay"
                            android:scrollbars="vertical" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/itemCreation_tilRate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/itemCreation_tilRate"
                        android:paddingTop="@dimen/itemCreation_paddingGeneral"
                        app:errorEnabled="true"
                        app:helperText="@string/itemCreation_tilHelperText"
                        app:layout_constraintEnd_toStartOf="@+id/itemCreation_glEnd"
                        app:layout_constraintStart_toStartOf="@+id/itemCreation_glStart"
                        app:layout_constraintTop_toBottomOf="@+id/itemCreation_tilDescription"
                        app:startIconDrawable="@drawable/ic_action_euro"
                        app:startIconTint="@color/purple_200">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/itemCreation_tieRate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:lines="1"
                            android:maxLength="9"
                            android:maxLines="1"
                            android:text="@={viewmodelitemcreation.rateItem}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:id="@+id/itemCreation_rlItemType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/itemCreation_paddingGeneral"
                        android:background="@drawable/spinner_border"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toStartOf="@+id/itemCreation_glEnd"
                        app:layout_constraintStart_toStartOf="@+id/itemCreation_glStart"
                        app:layout_constraintTop_toBottomOf="@+id/itemCreation_tilRate">

                        <Spinner
                            android:id="@+id/itemCreation_spItemType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/itemCreation_paddingGeneral"
                            android:background="@android:color/transparent"
                            android:entries="@array/itemType_array"
                            android:gravity="center"
                            android:paddingTop="@dimen/itemCreation_paddingGeneral"
                            android:paddingBottom="@dimen/itemCreation_paddingGeneral"
                            android:spinnerMode="dropdown" />

                        <ImageView
                            android:id="@+id/itemCreation_ivItemType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/itemCreation_paddingGeneral"
                            android:src="@drawable/ic_action_arrow" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/itemCreation_rlVatType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/itemCreation_rlVatTypeMargin"
                        android:layout_marginBottom="@dimen/itemCreation_rlVatTypeMargin"
                        android:background="@drawable/spinner_border"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/itemCreation_glEnd"
                        app:layout_constraintStart_toStartOf="@+id/itemCreation_glStart"
                        app:layout_constraintTop_toBottomOf="@+id/itemCreation_rlItemType">

                        <Spinner
                            android:id="@+id/itemCreation_spVatType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/itemCreation_paddingGeneral"
                            android:background="@android:color/transparent"
                            android:entries="@array/vatType_array"
                            android:gravity="center"
                            android:paddingTop="@dimen/itemCreation_paddingGeneral"
                            android:paddingBottom="@dimen/itemCreation_paddingGeneral"
                            android:spinnerMode="dropdown" />

                        <ImageView
                            android:id="@+id/itemCreation_ivVatType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/itemCreation_paddingGeneral"
                            android:src="@drawable/ic_action_arrow" />
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/itemCreation_btnSave"
            android:layout_width="0dp"
            android:layout_height="@dimen/itemCreation_heightBtn"
            android:layout_gravity="center"
            android:onClick="@{()->viewmodelitemcreation.validateItem()}"
            android:text="@string/itemCreation_btnDone"
            android:textSize="@dimen/item_sizeTitles"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>